# flowboost

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/aachenBomb/: aachenBomb.py
examples/aerofoilNACA0012Steady/: aerofoilNACA0012Steady.py  visualise.py
examples/coolingCylinder2D/: coolingCylinder2D.py
examples/pitzDaily/: pitzDaily.py  plot_results.py
flowboost/: __init__.py
flowboost/config/: config.py  optifoam_config.toml
flowboost/manager/: manager.py  readme.md
flowboost/manager/interfaces/: docker_local.py  local.py  sge.py  slurm.py
flowboost/openfoam/: case.py  data.py  dictionary.py  fields.py  interface.py  readme.md  runtime.py  types.py
flowboost/openfoam/data/: __init__.py  base.py  pandas.py  polars.py
flowboost/openfoam/docker/: Dockerfile
flowboost/optimizer/: acquisition_offload.py  acquisition_offload.sh  backend.py  objectives.py  scalars.py  search_space.py
flowboost/optimizer/interfaces/: Ax.py  readme.md
flowboost/scripts/: requirements.py
flowboost/session/: session.py
flowboost/utilities/: time.py
requirements/: requirements.txt  requirements_dev.txt
tests/: conftest.py  test_smoke.py
tests/flowboost/: test_config.py
tests/flowboost/manager/: test_docker_local.py  test_job_serialization.py  test_local.py  test_manager_mock.py  test_manager_prod.py  test_slurm.py
tests/flowboost/openfoam/: test_case.py  test_case_unit.py  test_data.py  test_data_unit.py  test_dictionary.py  test_dictionary_link.py  test_dictionary_unit.py  test_runtime.py  test_types.py  test_types_extended.py
tests/flowboost/optimizer/: conftest.py  test_ax_outcome_normalization_canary.py  test_backend.py  test_backend_unit.py  test_constraints.py  test_determinism.py  test_mobo_acceptance.py  test_objectives.py  test_objectives_unit.py  test_scalars.py  test_scalars_extended.py  test_search_space.py  test_search_space_extended.py
tests/flowboost/session/: test_session.py  test_session_docker_integration.py  test_session_unit.py  test_synthetic_openfoam_campaign.py
tests/flowboost/utilities/: test_time.py
