[project]
name = "flowboost"
version = "0.2.1"
description = "Multi-objective optimization framework for OpenFOAM"
license = "Apache-2.0"
authors = [
    { name = "Daniel Virokannas", email = "46869890+499602D2@users.noreply.github.com" },
]
maintainers = [
    { name = "Daniel Virokannas", email = "46869890+499602D2@users.noreply.github.com" },
    { name = "Bulut Tekgul", email = "bulut.tekgul@wartsila.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "OpenFOAM",
    "CFD",
    "Bayesian optimization",
    "Multi-objective optimization",
    "HPC",
    "Cluster computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ax-platform>=0.3.7",
    "coloredlogs>=15",
    "pandas>=2.2",
    "polars>=0.20",
    "psutil>=5.9",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
lts-cpu = ["polars-lts-cpu>=0.20"]

[project.urls]
Repository = "https://github.com/499602D2/flowboost"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3.8"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v -n 4"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
