[project]
name = "flowboost"
version = "0.2.9"
description = "Multi-objective Bayesian optimization library for OpenFOAM"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Daniel Virokannas", email = "46869890+499602D2@users.noreply.github.com" },
]
maintainers = [
    { name = "Daniel Virokannas", email = "46869890+499602D2@users.noreply.github.com" },
    { name = "Bulut Tekgul", email = "bulut.tekgul@wartsila.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "OpenFOAM",
    "CFD",
    "Bayesian optimization",
    "Multi-objective optimization",
    "HPC",
    "Cluster computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ax-platform>=1.0",
    "coloredlogs>=15",
    "pandas>=2.2",
    "polars>=1.11",
    "psutil>=5.9",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
lts-cpu = ["polars-lts-cpu>=1.11"]
viz = ["pyvista>=0.47.1"]

[project.urls]
Repository = "https://github.com/499602D2/flowboost"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.8",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -v -n 4"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "native_foam_only: requires native OpenFOAM (not Docker)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# botorch 0.16.1 has a latent circular import in `botorch.acquisition` that
# fires when any botorch submodule is imported cold from a submodule entry
# point. pytest-xdist's controller process hits it when unserializing
# `InputDataWarning`s emitted by Ax internals: the warning's category module
# is `botorch.exceptions.warnings`, and the controller (which hasn't imported
# botorch) imports it to rebuild the warning — triggering the circular.
# Filter the warning by message so it never crosses the worker→controller
# boundary. Category-based filters don't help because pytest resolves the
# category class eagerly, which re-triggers the same import.
filterwarnings = ["ignore:Data .outcome observations. is not standardized"]
